# homelab

./: .env-example  .gitignore  README.md  build_cluster.sh  pyproject.toml
ansible/: configure-cloud-image.yaml  configure-k8s.yaml  configure-proxmox.yaml  configure-pve-vm-templates.yaml  create-terraform-user.yaml  destroy-k3s-cluster.yaml  download-iso-images.yaml  download-kubeconfig.yaml  install-k3s.yaml  prepare-cloud-init-images.yaml  provision-k3s-cluster.yaml  talos-k8s.yaml
ansible/inventories/: homelab  k3s_hosts.tftpl  kind.yaml
ansible/inventories/homelab/: hosts.ini
ansible/inventories/operations/: hosts.ini
ansible/inventories/sandbox/: hosts.ini
benchmarking/pve-vm-disk-io/: README.md  config_sample.py  create.sh  destroy.sh  run.py  setup-host.yaml
benchmarking/pve-vm-disk-io/infra/: .tfvars  .tfvars_sample  main.tf  vars.tf
benchmarking/pve-vm-disk-io/results/: 2023-08-23 15:05:36.750787.json  2023-09-12 12:12:21.522998.json
debug/: ephemeral-pod.yaml  metallb_crds.yaml  nginx-persistent.yaml  nginx.yaml  storageclass.yaml
docs/: hardware.drawio
infra/docker-apps/unifi/: docker-compose.yaml
infra/hcp/vault-secrets/: main.tf
infra/k8s/talos/: main.tf  providers.tf  terraform.tf  tls-dev-02-cluster.tfplan  variables.tf
infra/pve/csi/: main.tf  providers.tf  terraform.tf
k8s/apps/cluster-infrastructure/: Chart.yaml  values-ops.yaml  values-prod.yaml  values-sbx.yaml  values.yaml
k8s/apps/sandbox/: main.tf  stackgres.yaml  (+2 more)
scripts/: deploy-talos-cluster.sh  destroy-talos-cluster.sh
tfmodules/pve-vms/: main.tf  vars.tf
(+116 files in other folders)
