[project]
name = "homelab"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Eirik W. Talberg", email = "eirik@taldev.no"},
]
dependencies = ["ansible>=11.1.0", "kubernetes>=31.0.0", "jsonpatch>=1.33", "pyyaml>=6.0.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
